Change image-based cursors to be loaded as QPixmap

QBitmap-based cursors seems to be very buggy on Windows when high-DPI
scaling is in use. QPixmap-based cursors seems to work better and even
supports colour, so switch to that.

BUG: 441232
(cherry picked from commit a33db56d6ef9eb46584e8be28685b7dcb15ab6f7)